Encapsulation improved